<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <!-- Show 1 -->
            <LinearLayout
                android:id="@+id/show1"
                android:layout_width="match_parent"
                android:layout_height="571dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <!-- Poster -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight=".35"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ralph"
                        android:layout_width="match_parent"
                        android:layout_height="171dp"
                        app:srcCompat="@drawable/avatar" />

                    <Button
                        android:id="@+id/changeAvatar"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/btn_changeAvatar"
                        android:textSize="12sp" />
                </LinearLayout>

                <!-- Title and Times -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight=".65"
                    android:orientation="vertical"
                    android:paddingLeft="3dp">

                    <TextView
                        android:id="@+id/title1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/rating1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/joinDate"
                        android:textColor="@color/design_default_color_primary_dark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/genre1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/points"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/times1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/loyaltyProgram"
                        android:textSize="18sp"
                        tools:textColor="@android:color/black" />
                    <Button
                        android:id="@+id/btnRedeem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/btn_redeemPoints" />

                    <Button
                        android:id="@+id/feedback1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/btn_feedback" />

                    <Button
                        android:id="@+id/changePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/btn_changePassword" />
                </LinearLayout>
            </LinearLayout>
            <!-- End Show 1 -->


        </LinearLayout>
</RelativeLayout>
