<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <!-- Show 1 -->
        <LinearLayout
            android:id="@+id/show1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <!-- Poster -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".35"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ralph"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/ralph" />
            </LinearLayout>

            <!-- Title and Times -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".65"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/showtimes_title1"
                    tools:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rating1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_pg"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/times1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movies_synopsis1"
                    tools:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/feedback1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/btn_feedback" />
            </LinearLayout>
        </LinearLayout>

        <!-- Show 2 -->
        <LinearLayout
            android:id="@+id/show2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <!-- Poster -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".35"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/creed"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/creed" />
            </LinearLayout>

            <!-- Title and Times -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".65"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/showtimes_title2"
                    tools:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rating2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_pg13"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/times2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movies_synopsis2"
                    tools:textColor="@android:color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/feedback2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/btn_feedback" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
