<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <!-- Show 1 -->
            <LinearLayout
                android:id="@+id/show1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <!-- Poster -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight=".35"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ralph"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/ralph" />
                </LinearLayout>

                <!-- Title and Times -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight=".65"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/showtimes_title1"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/times1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/showtimes_list1"
                        android:textSize="18sp"
                        tools:textColor="@android:color/black" />
                </LinearLayout>
            </LinearLayout>
            <!-- END Show 1 -->

            <!-- Show 2 -->
            <LinearLayout
                android:id="@+id/show2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <!-- Poster -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight=".35"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/creed"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/creed" />
                </LinearLayout>

                <!-- Title and Times -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight=".65"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/showtimes_title2"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/times2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/showtimes_list2"
                        android:textSize="18sp"
                        tools:textColor="@android:color/black" />
                </LinearLayout>
            </LinearLayout>
            <!-- End Show 2 -->

            <!-- Show 3 -->
            <LinearLayout
                android:id="@+id/show3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <!-- Poster -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight=".35"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/grinch_art"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/grinch" />
                </LinearLayout>

                <!-- Title and Times -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight=".65"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/showtimes_title3"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/times3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/showtimes_list3"
                        android:textSize="18sp"
                        tools:textColor="@android:color/black" />
                </LinearLayout>
            </LinearLayout>
            <!-- END Show 3 -->

            <!-- Show 4 -->
            <LinearLayout
                android:id="@+id/showtimes4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <!-- Poster -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight=".35"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fantastic-beasts-p"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/crimes" />
                </LinearLayout>

                <!-- Title and Times -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight=".65"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/showtimes_title4"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/times4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/showtimes_list3"
                        android:textSize="18sp"
                        tools:textColor="@android:color/black" />
                </LinearLayout>
            </LinearLayout>
            <!-- END Show 4 -->

            <!-- Show 5 -->
            <LinearLayout
                android:id="@+id/showtimes5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <!-- Poster -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight=".35"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/possession_poster"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/possession" />
                </LinearLayout>

                <!-- Title and Times -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight=".65"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/showtimes_title5"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/times5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/showtimes_list5"
                        android:textSize="18sp"
                        tools:textColor="@android:color/black" />
                </LinearLayout>
            </LinearLayout>
            <!-- END Show 5 -->

            <!-- Show 6 -->
            <LinearLayout
                android:id="@+id/showtimes6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <!-- Poster -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".35"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/bohemian"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/bohemian" />
                </LinearLayout>

                <!-- Title and Times -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".65"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/showtimes_title6"
                        tools:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/times6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/showtimes_list6"
                        tools:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
            <!-- END Show 6 -->

        </LinearLayout>
    </ScrollView>
</RelativeLayout>